--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+ <head>
  <title>Mrs. Christy's Website</title>
+ </head>
 <body>
   <h1>Aimee Christy</h1>
   <p>Welcome to my website!</p>
